# minushalf

./: .gitignore  .pylintrc  DEVELOPER.md  INP  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: publish-package.yml  python-publish.yml  tests.yml
docs/source/: api.rst  commands.rst  conf.py  create-input.rst  execute.rst  index.rst  index.rst.save  installation.rst  introduction.rst  minushalf.commands.rst  minushalf.corrections.rst  minushalf.corrections.vasp.rst  minushalf.data.rst  minushalf.interfaces.rst  minushalf.io.rst  minushalf.rst  minushalf.softwares.rst  minushalf.softwares.vasp.rst  minushalf.utils.rst  occupation.rst  run-atomic.rst  usage.rst  vbm-character.rst
minushalf/: __init__.py  conftest.py  minushalf.py
minushalf/atomic/: __init__.py  input_file.py  vtotal.py
minushalf/atomic_program/: __init__.py  atm_cGuima3.f  atm_cGuima3.pyf  atomic_program-f2pywrappers.f  atomic_programmodule.c  version.h
minushalf/commands/: __init__.py  band_character.py  band_gap.py  band_gap_test.py  cbm_character.py  correct_potfile.py  correct_potfile_test.py  create_input.py  create_input_test.py  execute.py  fractional_occupation.py  fractional_occupation_test.py  run_atomic_program.py  run_atomic_test.py  vbm_character.py  vbm_character_test.py
minushalf/corrections/: __init__.py  base_software.py  correction.py  factory.py  vasp_correction.py  vasp_correction_factory.py  vasp_valence.py
minushalf/data/: __init__.py  calculation_code.py  calculation_code_test.py  constants.py  correction_code.py  cut_initial_guess_methods.py  electronic_distribution.py  electronic_distribution_test.py  exchange_correlation.py  exchange_correlation_test.py  minushalf_yaml_default_configuration.py  minushalf_yaml_default_configuration_test.py  orbital.py  orbital_test.py  periodic_table.py  periodic_table_test.py  softwares.py  softwares_test.py
minushalf/handlers/: __init__.py  base_handler.py  create_software_module.py  get_band_projections.py  get_projections.py  read_minushalf_yaml.py  run_calculations.py
minushalf/interfaces/: __init__.py  band_projection_file.py  correction_abstract_factory.py  handler.py  minushalf_yaml.py  potential_file.py  runner.py  software_abstract_factory.py
minushalf/io/: __init__.py  atomic_program.py  atomic_program_test.py  correction.py  correction_code_test.py  correction_interface.py  correction_test.py  input_file.py  input_file_test.py  make_minushalf_results_test.py  minushalf_yaml.py  minushalf_yaml_default_configuration.py  minushalf_yaml_default_configuration_test.py  minushalf_yaml_interface.py  minushalf_yaml_tags.py  minushalf_yaml_test.py  software_configurations.py  vtotal.py  vtotal_test.py
minushalf/projected_wave_function/: __init__.py  projected_wave_function.py
minushalf/softwares/: DEVELOPER.md  __init__.py  factory.py  software_abstract_factory.py  softwares.py  softwares_test.py  vasp_factory.py  vasp_factory_test.py
minushalf/utils/: __init__.py  atomic_potential.py  band_structure.py  band_structure_module_test.py  band_structure_test.py  check_file_exists.py  (+41 more)
tests/: README.md  README.txt  conftest.py  run_tests.py  testconfig.yml
(+793 files in other folders)
