[tool.poetry]
name = "minushalf"
version = "1.9"
description = "Preprocessing tools for help in dft minus one half calculations"
authors = ["Henrique <hentt30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.14"
pandas = "3.0.3"
fortranformat = "2.0.3"
click = "8.1.0"
pyfiglet = "1.0.4"
loguru = "0.7.3"
tabulate = "0.9.0"
numpy = "2.4.6"
pyyaml = "6.0.1"
scipy = "1.17.1"
aenum = "3.1.17"

[tool.poetry.group.dev.dependencies]
pytest = "==7.0.0"
pytest-mock = "==3.10.0"
autopep8 = "^2.0.2"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "numpy==2.4.6", "meson", "ninja"]

[tool.pytest.ini_options]
# tells pytest where your tests live
testpaths = ["tests"]
# makes 'import minushalf' work from the repo root
pythonpath = ["."]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py314
skipsdist = True
install_command = python -m pip install {opts} {packages}

[testenv]
deps =
    pytest==7.0.0
    pytest-mock==3.10.0
    pandas==3.0.3
    fortranformat==2.0.3
    click==8.1.0
    pyfiglet==1.0.4
    loguru==0.7.3
    tabulate==0.9.0
    numpy==2.4.6
    pyyaml==6.0.1
    scipy==1.17.1
    aenum==3.1.17
    meson==1.11.1
    ninja==1.13.0
usedevelop = True
commands =
    python -m pytest {posargs}
"""
